[gd_scene load_steps=9 format=3 uid="uid://bde5i0sx0imq8"]

[ext_resource type="Script" path="res://scripts/torso.gd" id="1_4uvg0"]
[ext_resource type="Material" uid="uid://cemkv6be3u2s1" path="res://assets/materials/Flesh.tres" id="1_yu1ed"]
[ext_resource type="SphereMesh" uid="uid://cxcym3c8m6jin" path="res://scenes/blud.tres" id="3_evjxk"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p5qp7"]
resource_name = "Material.001"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.906332, 0.906332, 0.906332, 1)
roughness = 0.43079

[sub_resource type="ArrayMesh" id="ArrayMesh_fukal"]
_surfaces = [{
"aabb": AABB(-1.38872, -1.1, -1.42426, 2.77744, 2.2, 2.84852),
"format": 4097,
"index_count": 60,
"index_data": PackedByteArray(2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 7, 0, 1, 0, 3, 0, 7, 0, 5, 0, 1, 0, 2, 0, 11, 0, 10, 0, 2, 0, 3, 0, 11, 0, 10, 0, 9, 0, 8, 0, 10, 0, 11, 0, 9, 0, 8, 0, 1, 0, 0, 0, 8, 0, 9, 0, 1, 0, 2, 0, 8, 0, 0, 0, 2, 0, 10, 0, 8, 0, 11, 0, 1, 0, 9, 0, 11, 0, 3, 0, 1, 0),
"name": "Material.001",
"primitive": 3,
"vertex_count": 12,
"vertex_data": PackedByteArray(171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 63, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 63, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 191, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 191, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 63, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 63, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 191, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 191, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 63, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 63, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 191, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_xb0ft"]
resource_name = "Grumpt_Main_Cube003"
_surfaces = [{
"aabb": AABB(-1.38872, -1.1, -1.42426, 2.77744, 2.2, 2.84852),
"attribute_data": PackedByteArray(188, 101, 155, 62, 188, 38, 234, 62, 148, 35, 19, 63, 0, 0, 128, 63, 188, 101, 155, 62, 188, 38, 234, 62, 0, 0, 0, 0, 188, 38, 234, 62, 112, 47, 68, 62, 0, 0, 128, 63, 0, 0, 0, 0, 188, 38, 234, 62, 188, 101, 27, 63, 188, 38, 234, 62, 148, 35, 19, 63, 190, 101, 27, 63, 188, 101, 27, 63, 188, 38, 234, 62, 188, 101, 155, 62, 188, 38, 234, 62, 112, 47, 68, 62, 190, 101, 27, 63, 188, 101, 155, 62, 188, 38, 234, 62, 112, 47, 196, 62, 70, 115, 108, 63, 188, 101, 155, 62, 168, 141, 128, 62, 190, 101, 27, 63, 192, 101, 155, 62, 112, 47, 196, 62, 70, 115, 108, 63, 0, 0, 0, 0, 168, 141, 128, 62, 189, 101, 27, 63, 0, 0, 0, 52, 112, 47, 196, 62, 120, 242, 46, 63, 188, 101, 27, 63, 190, 101, 27, 63, 140, 230, 88, 63, 192, 101, 155, 62, 112, 47, 196, 62, 120, 242, 46, 63, 188, 101, 155, 62, 190, 101, 27, 63, 140, 230, 88, 63, 0, 0, 128, 51, 140, 230, 88, 63, 190, 101, 27, 63, 188, 101, 155, 62, 190, 101, 27, 63, 112, 47, 68, 63, 70, 115, 108, 63, 140, 230, 88, 63, 190, 101, 155, 62, 0, 0, 0, 0, 190, 101, 27, 63, 0, 0, 0, 0, 70, 115, 108, 63, 190, 101, 27, 63, 190, 101, 27, 63, 188, 101, 27, 63, 168, 141, 128, 62, 112, 47, 68, 63, 120, 242, 46, 63, 189, 101, 27, 63, 192, 101, 155, 62, 188, 101, 155, 62, 168, 141, 128, 62, 0, 0, 0, 0, 120, 242, 46, 63),
"format": 4119,
"index_count": 60,
"index_data": PackedByteArray(8, 0, 22, 0, 11, 0, 8, 0, 19, 0, 22, 0, 20, 0, 17, 0, 23, 0, 20, 0, 14, 0, 17, 0, 13, 0, 5, 0, 16, 0, 13, 0, 2, 0, 5, 0, 7, 0, 12, 0, 18, 0, 7, 0, 1, 0, 12, 0, 21, 0, 4, 0, 10, 0, 21, 0, 15, 0, 4, 0, 6, 0, 34, 0, 31, 0, 6, 0, 9, 0, 34, 0, 30, 0, 27, 0, 24, 0, 30, 0, 33, 0, 27, 0, 25, 0, 3, 0, 0, 0, 25, 0, 28, 0, 3, 0, 7, 0, 26, 0, 1, 0, 7, 0, 32, 0, 26, 0, 35, 0, 4, 0, 29, 0, 35, 0, 10, 0, 4, 0),
"material": SubResource("StandardMaterial3D_p5qp7"),
"name": "Material.001",
"primitive": 3,
"vertex_count": 36,
"vertex_data": PackedByteArray(171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 63, 132, 91, 255, 127, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 63, 255, 127, 0, 0, 0, 0, 255, 191, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 63, 122, 164, 255, 127, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 63, 132, 91, 255, 127, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 63, 255, 127, 255, 255, 255, 255, 255, 191, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 63, 122, 164, 255, 127, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 191, 0, 0, 132, 219, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 191, 255, 127, 0, 0, 0, 0, 255, 191, 171, 170, 170, 50, 205, 204, 140, 191, 4, 78, 182, 191, 255, 255, 132, 219, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 191, 0, 0, 132, 219, 255, 127, 0, 128, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 191, 255, 127, 255, 255, 255, 255, 255, 191, 171, 170, 170, 50, 205, 204, 140, 63, 4, 78, 182, 191, 255, 255, 132, 219, 255, 127, 0, 128, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 63, 255, 127, 0, 0, 0, 0, 255, 191, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 63, 122, 164, 255, 127, 255, 127, 0, 128, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 63, 255, 255, 255, 127, 255, 255, 255, 255, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 63, 255, 127, 255, 255, 255, 255, 255, 191, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 63, 122, 164, 255, 127, 255, 127, 0, 128, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 63, 255, 255, 255, 127, 254, 255, 0, 128, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 191, 255, 127, 0, 0, 0, 0, 255, 191, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 191, 255, 255, 132, 219, 255, 127, 0, 128, 166, 193, 177, 63, 205, 204, 140, 191, 55, 231, 94, 191, 255, 255, 255, 127, 254, 255, 0, 128, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 191, 255, 127, 255, 255, 255, 255, 255, 191, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 191, 255, 255, 132, 219, 255, 127, 0, 128, 166, 193, 177, 63, 205, 204, 140, 63, 55, 231, 94, 191, 255, 255, 255, 127, 254, 255, 0, 128, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 63, 0, 0, 255, 127, 255, 127, 255, 191, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 63, 132, 91, 255, 127, 255, 127, 0, 128, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 63, 255, 127, 0, 0, 0, 0, 255, 191, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 63, 0, 0, 255, 127, 255, 127, 255, 191, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 63, 132, 91, 255, 127, 255, 127, 0, 128, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 63, 255, 127, 255, 255, 255, 255, 255, 191, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 191, 0, 0, 255, 127, 255, 127, 255, 191, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 191, 0, 0, 132, 219, 255, 127, 0, 128, 166, 193, 177, 191, 205, 204, 140, 191, 55, 231, 94, 191, 255, 127, 0, 0, 0, 0, 255, 191, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 191, 0, 0, 255, 127, 255, 127, 255, 191, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 191, 0, 0, 132, 219, 255, 127, 0, 128, 166, 193, 177, 191, 205, 204, 140, 63, 55, 231, 94, 191, 255, 127, 255, 255, 254, 255, 255, 191)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_fukal")

[sub_resource type="BoxShape3D" id="BoxShape3D_v4p0q"]
size = Vector3(0.855524, 0.73945, 0.85008)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o61as"]
spread = 14.05
flatness = 0.12
gravity = Vector3(0, 10, 0)
angular_velocity_min = -145.62
angular_velocity_max = 145.62
linear_accel_min = -56.18
linear_accel_max = 22.47
hue_variation_min = -1.0
hue_variation_max = 1.0
turbulence_enabled = true
turbulence_noise_strength = 7.07
turbulence_noise_scale = 0.57
turbulence_noise_speed_random = 5.05

[node name="Torso" type="Node3D"]
script = ExtResource("1_4uvg0")

[node name="TorsoMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.3, 0, 4.52987e-08, 0, 0.3, 0, -4.52987e-08, 0, -0.3, 0, 0, 0)
mesh = SubResource("ArrayMesh_xb0ft")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("1_yu1ed")

[node name="StaticBody3D" type="StaticBody3D" parent="TorsoMesh" groups=["Limbs"]]
transform = Transform3D(-3.33333, 0, -5.03319e-07, 0, 3.33333, 0, 5.03319e-07, 0, -3.33333, 1.10805e-08, -4.19653, 0.0733828)
collision_layer = 16
collision_mask = 3

[node name="TorsoHit" type="CollisionShape3D" parent="TorsoMesh/StaticBody3D"]
transform = Transform3D(1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 0, 1.23596, 0.01837)
shape = SubResource("BoxShape3D_v4p0q")

[node name="BloodSpray" type="GPUParticles3D" parent="."]
transform = Transform3D(0.999957, -0.00930247, 0, 0.00930247, 0.999957, 0, 0, 0, 1, 0, 0, 0)
emitting = false
amount = 1000
lifetime = 5.0
one_shot = true
explosiveness = 1.0
randomness = 0.1
collision_base_size = 0.0
visibility_aabb = AABB(-27.9924, -20.5757, -15.0765, 55.9848, 41.1515, 30.153)
trail_lifetime = 2.78
process_material = SubResource("ParticleProcessMaterial_o61as")
draw_pass_1 = ExtResource("3_evjxk")
